@@ -20,6 +20,8 @@
 	- use perldeps.pl, phase out perl.{req,prov} (#161921).
 	- fix: make sqlite3 rpmdb endian-neutral (#159425).
 	- fix: permit sqlite3 rpmdb with chroot (#159424).
+	- fix: find-debuginfo.sh not handling set[ug]id ELF files (#100963).
+	- fix: find-debuginfo.sh kernel voo-doo tweaks (#159346).
 
 4.4 -> 4.4.1:
 	- force *.py->*.pyo byte code compilation with brp-python-bytecompile.
